# CR2A

./: .env  .env.example  .env.local  .env.template  .gitignore  ANALYSIS_VIEW_UPDATE.md  App.tsx  BUILD_COMPLETE.md  CHANGES_SUMMARY.md  CNAME  CODE_SIGNING_GUIDE.md  CR2A_Prompt_Script.docx  CR2A_Prompt_Script.txt  CR2A_TASK_RUNNER.md  CR2A_Template.docx  CR2A_USER_MANUAL.md  ChatKitPanel.tsx  Contract #1_analysis.json  Contract_5_Verified_Clauses.md  DEBUG_ANALYSIS.md  DELIVERY_SUMMARY.md  DEPLOYMENT_READY.md  DISTRIBUTION_CHECKLIST.txt  DNS_CONFIG_COCONUTS.txt  DNS_SETUP_TASKS.md  EXPECTED_ANALYSIS_OUTPUT.md  FIXES_APPLIED.md  FIXES_SUMMARY.md  FIX_LAMBDA_NOW.md  HOW_TO_USE.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_GUIDE.md  LAUNCHER_GUIDE.md  MEDIUM_FIXES.md  PROJECT_STRUCTURE.md  QUICKSTART.md  QUICK_REFERENCE.txt  QUICK_START.txt  QUICK_START_GUIDE.md  README.md  (+106 more)
.kilocode/: mcp.json
.next/: BUILD_ID  app-build-manifest.json  app-path-routes-manifest.json  build-manifest.json  prerender-manifest.json  react-loadable-manifest.json  required-server-files.json  trace
APS/: Clause Risk & Compliance Summary 4.docx  cr2a_export.docx  filled_from_docx.json  filled_llm.json  pyproject.toml
APS/contract-analysis-policy-bundle/policy/: control_flags_v1.json
APS/src/orchestrator/: analyzer.py  config.py  models.py  openai_client.py  pdf_export.py
APS/utils/: error_handler.py
amplify/: backend.ts  package.json
analyzer/: __init__.py  bid_spec_patterns.py  contract_analysis_cli.py  contract_extractor.py  openai_client.py  template_patterns.py  validator.py
api/: lambda-iam-policy.json  ping.ts  requires.txt
app/: App.tsx  globals.css  layout.tsx  page.tsx
assets/: .gitkeep
build_tools/: POPPLER_SETUP.md  build.py  create_self_signed_cert.ps1  hook-PyQt5.QtCore.py  hook-PyQt5.QtGui.py  hook-PyQt5.QtWidgets.py  hook-PyQt5.py  hook-llama_cpp.py  hook-pytesseract.py  hook-src.py  install_cert.ps1  runtime_hook_pyqt5.py  sign_application.ps1  sign_config.py
components/: ApprovalModal.tsx  ChatKitPanel.tsx  ExportPdfButton.tsx  FilePicker.tsx
config/: audit-config.example.json  audit-config.example.yaml  bid_checklist_schema_v1.json  minimal-config.yaml  output_schemas_v1.json  validation_rules_v1.json
cr2a-lambda-build/: DEPLOYMENT_INSTRUCTIONS.md  URGENT_FIX_REQUIRED.md  lambda_handler.py
docs/: CLEANUP_SUMMARY.md  CONTRACT_OVERVIEW_FIX.md  CRITICAL_FIXES_COMPLETED.md  CRITICAL_VERSIONING_ISSUES.md  DATABASE_SCHEMA.md  EXECUTIVE_SUMMARY.md  IMPLEMENTATION_PLAN.md  INTEGRATION_VERIFICATION_CHECKLIST.md  LOCAL_MODEL_GUIDE.md  OCR_CONFIGURATION.md  QUICKSTART_TESTING.md  QUICK_FIX_CHECKLIST.md  STEP_2_PRESIGNED_URL_DEEP_DIVE.md  SelfContainedInstaller_README.md  TASK_12_INTEGRATION_SUMMARY.md  (+14 more)
lib/: config.ts  (+1 more)
(+571 files in other folders)
