[project]
name = "aps-orchestrator"
version = "0.1.0"
description = "Single-prompt contract analysis orchestrator with strict schemas"
authors = [{ name = "APS" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.112",
  "uvicorn>=0.30",
  "pydantic>=2.7",
  "httpx>=0.27",
  "jsonschema>=4.22",
  "python-dotenv>=1.0",
  "typer>=0.12",
  "orjson>=3.10"
]

[project.optional-dependencies]
pdf = ["reportlab>=4.2", "pypdf>=5.0"]